{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 14,
  "lineage": "da6a26ff-6d25-f975-04fb-056c3a49b97e",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565898898567:internet-gateway/igw-08f04ac88c2bfc2c9",
            "id": "igw-08f04ac88c2bfc2c9",
            "owner_id": "565898898567",
            "region": "us-east-1",
            "tags": {
              "Name": "gateway"
            },
            "tags_all": {
              "Name": "gateway"
            },
            "vpc_id": "vpc-0b65138d03ef12ee3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565898898567",
            "id": "igw-08f04ac88c2bfc2c9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s_master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04af95eabef94f395",
            "arn": "arn:aws:ec2:us-east-1:565898898567:instance/i-01ae9106192ecbcea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ae9106192ecbcea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "public_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d0d6c262184f8e25"
              }
            ],
            "primary_network_interface_id": "eni-0d0d6c262184f8e25",
            "private_dns": "ip-10-0-1-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_ip": "3.91.209.246",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-017d5decd894ae705",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b850a33ce757ef3",
            "tags": {
              "Name": "k8s-master",
              "Role": "k8s_control_plane"
            },
            "tags_all": {
              "Name": "k8s-master",
              "Role": "k8s_control_plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05faea55286de33f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565898898567",
            "id": "i-01ae9106192ecbcea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.public_key_pair",
            "data.aws_ami.amazon_linux",
            "module.security_group.aws_security_group.this",
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this",
            "tls_private_key.rsa_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.k8s_worker01",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04af95eabef94f395",
            "arn": "arn:aws:ec2:us-east-1:565898898567:instance/i-0a0e779a583e198b4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0e779a583e198b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "public_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01d96c011750ac43e"
              }
            ],
            "primary_network_interface_id": "eni-01d96c011750ac43e",
            "private_dns": "ip-10-0-1-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "public_ip": "3.237.223.221",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07153d24c94be4054",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b850a33ce757ef3",
            "tags": {
              "Name": "k8s-worker01",
              "Role": "k8s_workers"
            },
            "tags_all": {
              "Name": "k8s-worker01",
              "Role": "k8s_workers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05faea55286de33f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565898898567",
            "id": "i-0a0e779a583e198b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.public_key_pair",
            "data.aws_ami.amazon_linux",
            "module.security_group.aws_security_group.this",
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this",
            "tls_private_key.rsa_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.k8s_worker02",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04af95eabef94f395",
            "arn": "arn:aws:ec2:us-east-1:565898898567:instance/i-031325df33f111277",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031325df33f111277",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "public_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09d7452aa00326191"
              }
            ],
            "primary_network_interface_id": "eni-09d7452aa00326191",
            "private_dns": "ip-10-0-1-209.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.209",
            "public_ip": "100.58.240.109",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-058df8ec70b225785",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b850a33ce757ef3",
            "tags": {
              "Name": "k8s-worker02",
              "Role": "k8s_workers"
            },
            "tags_all": {
              "Name": "k8s-worker02",
              "Role": "k8s_workers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05faea55286de33f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565898898567",
            "id": "i-031325df33f111277",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.public_key_pair",
            "data.aws_ami.amazon_linux",
            "module.security_group.aws_security_group.this",
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this",
            "tls_private_key.rsa_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565898898567:route-table/rtb-048fca66c467af349",
            "id": "rtb-048fca66c467af349",
            "owner_id": "565898898567",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f04ac88c2bfc2c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table"
            },
            "tags_all": {
              "Name": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b65138d03ef12ee3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565898898567",
            "id": "rtb-048fca66c467af349",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bfc15eca0dba3d0",
            "region": "us-east-1",
            "route_table_id": "rtb-048fca66c467af349",
            "subnet_id": "subnet-03b850a33ce757ef3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565898898567",
            "id": "rtbassoc-07bfc15eca0dba3d0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.route_table.aws_route_table.this",
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565898898567:security-group/sg-05faea55286de33f0",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05faea55286de33f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow ALL internal traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security-group",
            "name_prefix": "",
            "owner_id": "565898898567",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group"
            },
            "tags_all": {
              "Name": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b65138d03ef12ee3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565898898567",
            "id": "sg-05faea55286de33f0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarqube",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04af95eabef94f395",
            "arn": "arn:aws:ec2:us-east-1:565898898567:instance/i-0d8b4a6ba68d2ce91",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8b4a6ba68d2ce91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "public_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-036a4a2631617c694"
              }
            ],
            "primary_network_interface_id": "eni-036a4a2631617c694",
            "private_dns": "ip-10-0-1-92.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.92",
            "public_ip": "34.201.205.190",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008c34ecfe2a5a105",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b850a33ce757ef3",
            "tags": {
              "Name": "sonarqube",
              "Role": "sonar"
            },
            "tags_all": {
              "Name": "sonarqube",
              "Role": "sonar"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05faea55286de33f0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565898898567",
            "id": "i-0d8b4a6ba68d2ce91",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.public_key_pair",
            "data.aws_ami.amazon_linux",
            "module.security_group.aws_security_group.this",
            "module.subnet.aws_subnet.this",
            "module.vpc.aws_vpc.this",
            "tls_private_key.rsa_private_key"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565898898567:subnet/subnet-03b850a33ce757ef3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b850a33ce757ef3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565898898567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet"
            },
            "tags_all": {
              "Name": "subnet"
            },
            "vpc_id": "vpc-0b65138d03ef12ee3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565898898567",
            "id": "subnet-03b850a33ce757ef3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565898898567:vpc/vpc-0b65138d03ef12ee3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08804ee436f2d8e02",
            "default_route_table_id": "rtb-0c51d70a86eee7caa",
            "default_security_group_id": "sg-06ceb3742707777a0",
            "dhcp_options_id": "dopt-01c56d419db750536",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b65138d03ef12ee3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c51d70a86eee7caa",
            "owner_id": "565898898567",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "565898898567",
            "id": "vpc-0b65138d03ef12ee3",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}